Fix Sidebar Item Invisible on develop_pwa

--- a/app/theme/client/imports/components/sidebar/sidebar-item.css
+++ b/app/theme/client/imports/components/sidebar/sidebar-item.css
@@ -326,6 +326,7 @@
 			display: flex;
 			overflow: visible !important;
 			flex: 1;
+			-webkit-box-flex:1;
 
 			margin: 0 -3px;
 			align-items: center;
@@ -347,6 +348,7 @@
 		&__body {
 			display: -webkit-box;
 			height: 100%;
+			-webkit-box-flex: 1;
 		}
 
 		&__time {
